kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sat-qa
---
apiVersion: v1
kind: Namespace
metadata:
  name: sat-prod
