kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sat-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: qa.grupo2.uta.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sat-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prod.grupo2.uta.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway
                port:
                  number: 80
